Use mod_rewrite rather than mod_proxy
The rational is that mod_proxy cannot exclude a URL, so this
break the letsencrypt magic. We still need to put that in
ansible-role-httpd.

--- a/templates/proxy_rdo_dashboards.conf
+++ b/templates/proxy_rdo_dashboards.conf
@@ -1,3 +1,8 @@
 # {{ ansible_managed }}
-ProxyPass / http://127.0.0.1:3030/
+# use mod_rewrite and not mod_proxy for letsencrypt handling
+RewriteEngine  on
+# for lets encrypt automation
+RewriteCond %{REQUEST_URI} !^/.well-known/acme-challenge/
+RewriteRule ^/(.*)         http://127.0.0.1:3030/$1 [L,P]
+
 ProxyPassReverse / http://127.0.0.1:3030/
