Use new 'httpd' role API
Change-Id: I9957471e975207b9ab92425e87b8e0dd50dc02ea

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+
+# other parameters like TLS settings will be passed to this role
+- name: Create vhost for rdo_dashboards
+  include_role:
+    name: httpd
+    tasks_from: vhost
+
 # create a user
 - set_fact:
     home: /srv/{{ dashboards_user }}
