fix missing dashboard reload handler
'Reload rdo_dashboards' handler was missing.
Also it was renamed because the reload action is not available, so
restarting instead.

Change-Id: Iee8bbc10281bc0987d1d1a931ce40f64a1105c9a

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,10 @@
+---
+
 - name: Reload systemd
   command: systemctl daemon-reload
+
+- name: Restart rdo_dashboards
+  service:
+    name: rdo_dashboards
+    state: restarted
+
