fix missing dashboard reload handler
'Reload rdo_dashboards' handler was missing.
Also it was renamed because the reload action is not available, so
restarting instead.

Change-Id: Iee8bbc10281bc0987d1d1a931ce40f64a1105c9a

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,7 +56,7 @@
   template:
     src: config.ru
     dest: "{{ git_checkout }}/config.ru"
-  notify: Reload rdo_dashboards
+  notify: Restart rdo_dashboards
 
 - name: Start the rdo_dashboards service
   service:
