service 'running' state is deprecated
Change-Id: Ib3535746b7d5aed9d7445d78f7c71d6d5523f10f

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -62,7 +62,7 @@
 - name: Start the rdo_dashboards service
   service:
     name: rdo_dashboards
-    state: running
+    state: started
     enabled: yes
 
 - name: Deploy the cron to update the dashboards data
