Change from dashing (old) --> smashing (new)
This is part of a multi repo / patch set.

Background / More Info:

- https://smashing.github.io
- https://github.com/Shopify/dashing/issues/711

Depends-On: https://review.rdoproject.org/r/#/c/11575

Change-Id: Icee7050e6ec9be0814cf12cb60e1bc8b99d5eb96

--- a/templates/rdo_dashboards.service
+++ b/templates/rdo_dashboards.service
@@ -7,7 +7,7 @@ Environment=PATH={{ home }}/bin:/usr/bin:/usr/local/bin
 User={{ dashboards_user }}
 Type=simple
 WorkingDirectory={{ git_checkout }}
-ExecStart=/usr/bin/bundle exec dashing start
+ExecStart=/usr/bin/bundle exec smashing start
 
 [Install]
 WantedBy=multi-user.target
