fix obsolete reference to httpd/duck_work_during_misc_vacation
Change-Id: I557cfde7c4c9d816c619c96e3b8a0407f8ff2843

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,3 @@
 ---
-- src: https://github.com/OSAS/ansible-role-httpd
+- src: git+https://gitlab.com/osas/ansible-role-ah-httpd.git
   name: httpd
-  version: duck_work_during_misc_vacation
