Install gems in a writable path
Change-Id: I01b45f82212c6cf3a649d22431ae95bc10a91f63

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,7 +54,7 @@
       # no manual changes allowed, crush them all
       force: yes
 
-  - command: bundle install
+  - command: "bundle install --path ~/.gem"
     args:
       chdir: '{{ git_checkout }}'
 
