Add some packages to be installed
Some of the Ruby gems required by the role need to have openssl-devel
and redhat-rpm-config installed, or they will fail.

Change-Id: I2b59b2d790e500d69c60c912afb6d85791b91671

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,16 +13,17 @@
 
 - name: Install needed packages
   package:
-    name: '{{ item }}'
+    name:
+      - ruby-devel
+      - gcc
+      - gcc-c++
+      - make
+      - rubygem-bundler
+      - nodejs
+      - git
+      - openssl-devel
+      - redhat-rpm-config
     state: present
-  with_items:
-  - ruby-devel
-  - gcc
-  - gcc-c++
-  - make
-  - rubygem-bundler
-  - nodejs
-  - git
 
 - name: Create the user for rdo_dashboards
   user:
