--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,6 +23,9 @@
       - git
       - openssl-devel
       - redhat-rpm-config
+      - python3
+      - python3-virtualenv
+      - python3-koji
     state: present
 
 - name: Create the user for rdo_dashboards
