--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,9 @@
   include_role:
     name: httpd
     tasks_from: vhost
+  vars:
+    reverse_proxy: http://127.0.0.1:3030/
+    reverse_proxy_preserve_host: False
 
 # create a user
 - set_fact:
@@ -100,8 +103,3 @@
     user: "{{ dashboards_user }}"
     minute: '*/20'
 
-- name: Deploy the httpd config
-  template:
-    src: proxy_rdo_dashboards.conf
-    dest: /etc/httpd/conf.d/{{ website_domain }}.conf.d/proxy_rdo_dashboards.conf
-  notify: verify config and restart httpd
