--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,13 @@
     home: /srv/{{ dashboards_user }}
     git_checkout: /srv/{{ dashboards_user }}/git
 
+# CRB is needed for some of the required packages
+- name: Enable CRB repo CentOS 9
+  become: true
+  ansible.builtin.command: dnf config-manager --enable crb --save
+  changed_when: false
+  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "9"
+
 - name: Install needed packages
   package:
     name:
@@ -61,7 +68,9 @@
       # no manual changes allowed, crush them all
       force: yes
 
-  - command: "bundle install --path ~/.gem"
+  - shell: |
+      bundle config set --local path ~/.gem
+      bundle install
     args:
       chdir: '{{ git_checkout }}'
 
